# minirobot

./: README.md  材料清单.txt
catkin_ws-src-quadruped/quadruped/: CMakeLists.txt  package.xml
catkin_ws-src-quadruped/quadruped/config/: joint_names_RL_robot.yaml
catkin_ws-src-quadruped/quadruped/launch/: display.launch  gazebo.launch  gazebo_backup.launch  quadruped_rviz.rviz
catkin_ws-src-quadruped/quadruped/meshes/: LF_FOOT.STL  LF_HIP.STL  LF_KNEE.STL  LF_SHANK.STL  LH_FOOT.STL  LH_HIP.STL  LH_KNEE.STL  LH_SHANK.STL  RF_FOOT.STL  RF_HIP.STL  RF_KNEE.STL  RF_SHANK.STL  RH_FOOT.STL  RH_HIP.STL  RH_KNEE.STL  RH_SHANK.STL  base.STL  center_of_mass.STL  forward_backward.STL  up_down.STL
catkin_ws-src-quadruped/quadruped/robots/: boom.urdf  quadruped (copy).urdf  quadruped (with ground copy).urdf  quadruped.urdf
catkin_ws-src-quadruped/quadruped/src/: parser.cpp
catkin_ws-src-quadruped/quadruped_controller/: CMakeLists.txt  package.xml
catkin_ws-src-quadruped/quadruped_controller/config/: joint_position_control.yaml
catkin_ws-src-quadruped/quadruped_controller/launch/: quadruped_controller.launch
catkin_ws-src-quadruped/quadruped_controller/src/: kinematics_algorithm.py  pos_pub.py  readme.txt  tarj_data.py  teleop_control.py
catkin_ws-src-quadruped/quadruped_controller/src/code0.0/: pos_pub.py  teleop_control.py
模型/Gcode/: 右小腿.gcode  右臀部.gcode  左前大腿内侧.gcode  左前大腿链接.gcode  左大腿外侧_配舵机盘.gcode  左小腿.gcode  左腿轴承525.gcode  左臀部.gcode  挡板_前.gcode  挡板_后.gcode
模型/SolidWorks/: ASSEMBLYING.SLDASM  BASE.SLDPRT  BEARING.SLDPRT  DAMPER_BACKWARD.SLDPRT  DAMPER_FORWARD.SLDPRT  FLANGE_PLATE.SLDPRT  HIP_LEFT.SLDPRT  HIP_RIGHT.SLDPRT  SHANK_LEFT.SLDPRT  SHANK_RIGHT.SLDPRT  THIGH_CON.SLDPRT  THIGH_INNER.SLDPRT  THIGH_OUTER.SLDPRT
模型/URDF/my_robot/: package.xml
模型/URDF/my_robot/config/: joint_names_my_robot.yaml
模型/URDF/my_robot/launch/: display.launch
模型/URDF/my_robot/meshes/: LF_KNEE.STL  LF_SHANK.STL  LH_KNEE.STL  LH_SHANK.STL  RF_KNEE.STL  RF_SHANK.STL  RH_KNEE.STL  RH_SHANK.STL  base.STL
模型/URDF/my_robot/robots/: my_robot.urdf
模型/URDF/sw_files/: LF_SHANK.SLDPRT  base.SLDPRT
软件程序/: Arduino-ubuntu.rar  Arduino.rar  舵机零位.txt
